@@ -247,7 +247,7 @@ function SPropProtection.PhysGravGunPickup(ply, ent)
 					return false
 				end
 				for a,b in pairs(SPropProtection.AntiCopy) do
-					if string.find(v:GetClass(), b) then
+					if string.find(v:GetClass(), b) and not string.find(v:GetClass(), "cameraprop") then
 						return false
 					end
 				end
@@ -456,7 +456,7 @@ function SPropProtection.OnPhysgunReload(weapon, ply)
 				return false
 			end
 			for a,b in pairs(SPropProtection.AntiCopy) do
-				if string.find(v:GetClass(), b) then
+				if string.find(v:GetClass(), b) and not string.find(v:GetClass(), "cameraprop") then
 					Notify(ply, 1, 4, "Cannot touch because it has wrong entities attached to it")
 					return false
 				end
